replaced map_dfc with map_dfr where appropriate.

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1402,19 +1402,19 @@ their name reflects the type of output you want from the mapping operation:
 | `map_dbl()` | double vector |
 | `map_chr()` | character vector |
 | `map_dfc()` | data frame, combining column-wise |
-| `map_dfc()` | data frame, combining row-wise |
+| `map_dfr()` | data frame, combining row-wise |
 
-Let's get the columns' maximums again, but this time use the `map_dfc` function
+Let's get the columns' maximums again, but this time use the `map_dfr` function
 to return the output as a data frame:
 
 ``` {r 02-map-df-example}
 region_lang |>
   select(mother_tongue:lang_known) |>
-  map_dfc(max)
+  map_dfr(max)
 ```
 
 Which `map` function you choose depends on what you want to do with the
-output; you don't always have to pick `map_dfc`!
+output; you don't always have to pick `map_dfr`!
 
 > **Note on calculating summary statistics with `map` when there are NA's**:
 > 
@@ -1432,7 +1432,7 @@ output; you don't always have to pick `map_dfc`!
 > ``` {r}
 > region_lang_na |>
 >   select(mother_tongue:lang_known) |>
->   map_dfc(max, na.rm = TRUE)
+>   map_dfr(max, na.rm = TRUE)
 > ```
 
 The `map` family functions are generally quite useful for solving many problems 
