--- a/viz.Rmd
+++ b/viz.Rmd
@@ -52,7 +52,7 @@ and the focus of this chapter.
 However, when the goal of communication is precision and details, 
 tables can then be a better choice.
 
-Recall [the different data analysis questions](index.html#chapter-learning-objectives) from the first chapter. With the visualizations
+Recall [the different data analysis questions](index.html#chapter-learning-objectives) from Chapter \@ref(intro). With the visualizations
 we will cover in this chapter, we will be able to answer *only descriptive and exploratory* questions. Be careful not to try to answer any *predictive, inferential, causal or mechanistic*
 questions, as we have not learned the tools necessary to do that properly just yet.  
 
