reworded what to not try to make it more clear.

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -52,9 +52,14 @@ and the focus of this chapter.
 However, when the goal of communication is precision and details, 
 tables can then be a better choice.
 
-Recall [the different data analysis questions](index.html#chapter-learning-objectives) from the first chapter. With the visualizations
-we will cover in this chapter, we will be able to answer *only descriptive and exploratory* questions. Be careful not to try to answer any *predictive, inferential, causal or mechanistic*
-questions, as we have not learned the tools necessary to do that properly just yet.  
+Recall 
+[the different data analysis questions](index.html#chapter-learning-objectives) 
+from the first chapter. 
+With the visualizations we will cover in this chapter, 
+we will be able to answer *only descriptive and exploratory* questions. 
+Be careful to not answer any *predictive, inferential, causal* 
+*or mechanistic* questions with visualizations presented here, 
+as we have not learned the tools necessary to do that properly just yet.  
 
 As with most coding tasks, it is totally fine (and quite common) to make mistakes and iterate a few times before you find the right visualization for your data and question. There are [many different kinds of plotting graphics](https://serialmentor.com/dataviz/directory-of-visualizations.html) available to use. For the kinds we will introduce in this book, the general rules of thumb are:
 \index{visualization!line}
