improved guiding principles wording along with better ordered the plot list by increasing complexity (and our order of presentation).

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -53,15 +53,23 @@ Be careful to not answer any *predictive, inferential, causal*
 as we have not learned the tools necessary to do that properly just yet.  
 
 As with most coding tasks, it is totally fine (and quite common) to make mistakes and iterate a few times before you find the right visualization for your data and question. There are [many different kinds of plotting graphics](https://serialmentor.com/dataviz/directory-of-visualizations.html) available to use. For the kinds we will introduce in this book, the general rules of thumb are:
+
+
+There are [many different plotting graphics available to use]((https://serialmentor.com/dataviz/directory-of-visualizations.html)). 
+The type of plot you create depends on your data 
+and the question you want to answer. 
+In general, for the kinds of plots we will introduce in this book, 
+the guiding principles of when to use what type of plot are as follows:
+
 \index{visualization!line}
 \index{visualization!histogram}
 \index{visualization!scatter}
 \index{visualization!bar}
 
-- **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
-- **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) 
 - **scatter plots** visualize the relationship between two quantitative variables
+- **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
 - **bar plots** visualize comparisons of amounts
+- **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur)
 
 All types of visualization have their (mis)uses, but three kinds are usually hard to understand or are easily replaced with an oft-better alternative.
 In particular, you should avoid **pie charts**; it is generally better to use bars, as it is easier to compare bar heights than pie slice sizes.
