--- a/viz.Rmd
+++ b/viz.Rmd
@@ -162,7 +162,7 @@ co2_df
 We see we have two columns available to us; `date_measured` and `ppm`. 
 The `date_measured` column holds the date the measurement was taken, 
 and is of type `date`.
-The `ppm` columns holds the value of $CO_2$ in parts per million 
+The `ppm` column holds the value of CO$_{\text{2}}$ in parts per million 
 that was measured on each date, and is type `double`.
 
 > **Note:** `read_csv` was able to parse the `date_measured` column into the
