--- a/viz.Rmd
+++ b/viz.Rmd
@@ -258,7 +258,7 @@ ggplot(line_data, aes(x = x, y = y)) +
 ```
 
 
-Let's now try tp visualize the `co2_df` as a line plot 
+Let's now try to visualize the `co2_df` as a line plot 
 with just the default arguments: 
 \index{ggplot!geom\_line}
 
