--- a/viz.Rmd
+++ b/viz.Rmd
@@ -580,7 +580,7 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color 
 ```
 
 You can use this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) \index{color palette!color blindness simulator} to check if your visualizations are colour blind friendly.
-Additionally, the `ggthemes` R package also has a [color blind friendly color pallete](https://jrnold.github.io/ggthemes/reference/colorblind.html).
+Additionally, the `ggthemes` R package also has a [color blind friendly color palette](https://jrnold.github.io/ggthemes/reference/colorblind.html).
 
 From the visualization in Figure \@ref(fig:scatter-colour-by-category-palette), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages as their mother tongue and as the language they speak most often at home. 
 
