--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1,3 +1,8 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 # Effective data visualization {#viz}
 
 ## Overview 
@@ -69,7 +74,7 @@ the guiding principles of when to use what type of plot are as follows:
 - **scatter plots** visualize the relationship between two quantitative variables
 - **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
 - **bar plots** visualize comparisons of amounts
-- **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur)
+- **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) \index{distribution}
 
 All types of visualization have their (mis)uses, but three kinds are usually hard to understand or are easily replaced with an oft-better alternative.
 In particular, you should avoid **pie charts**; it is generally better to use bars, as it is easier to compare bar heights than pie slice sizes.
@@ -419,7 +424,8 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point()
 ``` 
 
-To improve the interpretability of the data visualization in Figure \@ref(fig:03-mother-tongue-vs-most-at-home) we should replace the default axis names with a more informative labels. We can use `\n` to create a line break in the axis names so the words after `\n` are printed on a new line. This will make the axes labels on the plots more readable.
+To improve the interpretability of the data visualization in 
+Figure \@ref(fig:03-mother-tongue-vs-most-at-home), we should replace the default axis names with a more informative labels. We can use `\n` to create a line break in the axis names so the words after `\n` are printed on a new line. This will make the axes labels on the plots more readable.
 \index{escape character} We should also increase the font size again further improve readability.
 
 ```{r 03-mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
@@ -432,6 +438,7 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
 
 Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of the visualization in Figure \@ref(fig:03-mother-tongue-vs-most-at-home-labs). The data is clumped because many more people in Canada speak the two languages represented by the points in the upper right corner. By filtering the data, we can confirm these two points correspond to the two official languages (English and French):
 \index{filter}
+
 ```{r english-mother-tongue}
 can_lang |>
   filter(language == "English" | language == "French")
@@ -485,12 +492,14 @@ When we see two variables moving in the same direction
 If instead, we saw two variables moving in the opposite direction 
 (as x increases, y decreases), we would call this a *negative relationship*.
 Another possibility here, is to observe no relationship. 
-This is when y neither nor decreases across the values of x.
-Because the points are fairly close together, 
+This is when y neither increases nor decreases across the values of x.
+Because the points in Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale) 
+are fairly close together, 
 we can say that the relationship is strong. 
 If instead, we saw that the points were spread much further apart, 
 we would say that the relationship was weak.
-Because drawing a straight line through these points 
+Because drawing a straight line through these points in 
+Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale)
 would fit the pattern we observe quite well, we say that it's linear.
 If instead, drawing a straight line through these points 
 did not fit the observed pattern of the data, 
@@ -582,11 +591,22 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color 
 You can use this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) \index{color palette!color blindness simulator} to check if your visualizations are colour blind friendly.
 Additionally, the `ggthemes` R package also has a [color blind friendly color pallete](https://jrnold.github.io/ggthemes/reference/colorblind.html).
 
-From the visualization in Figure \@ref(fig:scatter-colour-by-category-palette), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages as their mother tongue and as the language they speak most often at home. 
-
-What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
-
-For each higher-level language category, there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
+From the visualization in Figure \@ref(fig:scatter-colour-by-category-palette), 
+we can now clearly see that not just a lot, 
+but that the majority of Canadians reported one of the official languages 
+as their mother tongue and as the language they speak most often at home. 
+What do we see when considering the second part of our exploratory question? 
+Do we see a difference in the pattern of the relationship 
+between the percentage of people who speak a language as their mother tongue 
+and the percentage of people who speak a language 
+as their primary spoken language at home 
+between higher-level language categories? Probably not!
+For each higher-level language category, 
+there appears to be a positive relationship between the percentage of people 
+who speak a language as their mother tongue 
+and the percentage of people who speak a language 
+as their primary spoken language at home. 
+This relationship looks similar, regardless of the category. 
 
 Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home? The answer to both these questions is "no." However, with exploratory data analysis, we can create new hypotheses, ideas, and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will see more of later in this book.   
 
@@ -611,13 +631,14 @@ can_lang <- bind_rows(
 
 
 We have added a few more layers to make the data visualization in Figure \@ref(fig:03-nachos-to-cheesecake) even more effective. Specifically, we used have improved the visualizations accessibility by choosing colours that are easier to distinguish, mapped category to shape, and handled the problem of overlapping data points by making them slightly transparent. \index{ggplot!transparency}\index{alpha|see{ggplot}}
+
 ```{r 03-nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(
   x = most_at_home_percent,
   y = mother_tongue_percent,
   colour = category,
-  shape = category
-)) + # map categories to different shapes
+  shape = category # map categories to different shapes
+)) + 
   geom_point(alpha = 0.6) + # set the transparency of the points
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
        y = "Mother tongue \n (percentage of Canadian residents)") +
@@ -742,23 +763,22 @@ The `morley` data set \index{Michelson speed of light}
 contains measurements of the speed of light 
 collected in experiments performed in 1879.
 Five experiments were performed, 
-and in each experiment 20 runs were performed - 
-meaning that 20 measurements of the speed of light were collected 
+and in each experiment, 20 runs were performed&mdash;meaning that 
+20 measurements of the speed of light were collected 
 in each experiment [@lightdata].
 
 The `morley` data set is available in base R as a data frame,
 so it does not need to be loaded.
 We convert it to a tibble to take advantage of the nicer print output 
 these specialized data frames provide.
-An additional thing to know about this data set, 
-is that because the speed of light is a very large number 
+Because the speed of light is a very large number 
 (the true value is 299,792.458 km/sec) the data is coded
 to be the measured speed of light minus 299,000.
 Doing this allows us to explore the variability in the measurements 
 collected on the speed of light. 
 If we were to focus on the entire large number, 
 these smaller differences would become not noticeable, 
-even though in this case they are quite important. 
+even though in this case, they are quite important. 
 
 **Question:** \index{question!visualization} Given what we know now about the speed of 
 light (299,792.458 kilometres per second), how accurate were each of the experiments?
@@ -769,18 +789,26 @@ morley <- as_tibble(morley)
 morley
 ```
 
-In this experimental data, Michelson was trying to measure just a single quantitative number (the speed of light). The data set
-contains many measurements of this single quantity. To tell how accurate the experiments were, we need to visualize the 
-distribution of the measurements (i.e., all their possible values and how often each occurs). We can do this using a *histogram*. A histogram \index{ggplot!histogram} helps us visualize how a 
-particular variable is distributed in a data set by separating the data into bins, and then using vertical bars 
-to show how many data points fell in each bin. 
+In this experimental data, 
+Michelson was trying to measure just a single quantitative number 
+(the speed of light). 
+The data set contains many measurements of this single quantity. 
+\index{distribution} 
+To tell how accurate the experiments were, 
+we need to visualize the distribution of the measurements 
+(i.e., all their possible values and how often each occurs). 
+We can do this using a *histogram*. 
+A histogram \index{ggplot!histogram} 
+helps us visualize how a particular variable is distributed in a data set 
+by separating the data into bins, 
+and then using vertical bars to show how many data points fell in each bin. 
 An example of a histogram is shown in Figure \@ref(fig:histogram-sketch).
 
 ```{r histogram-sketch, echo = FALSE, fig.width = 3.25, fig.height = 3, fig.align = 'center', fig.cap = "Example of a histogram."}
 histogram_data <- tibble(measurements = rnorm(200, 25, 5))
 
 ggplot(histogram_data, aes(x = measurements)) +
-  geom_histogram(bins = 20) +
+  geom_histogram() +
   theme_classic()
 ```
 
@@ -796,16 +824,18 @@ morley_hist
 Figure \@ref(fig:03-data-morley-hist) is a great start. 
 However, 
 we cannot tell how accurate the measurements are using this visualization 
-unless we can see what the true value is.
+unless we can see the true value.
 In order to visualize the true speed of light, 
-we will add a vertical line with the `geom_vline` function 
+we will add a vertical line with the `geom_vline` function
 \index{ggplot!geom\_vline}.
 To draw a vertical line with `geom_vline`, 
 we need to specify where on the x-axis the line should be drawn. 
 We can do this by setting the `xintercept` argument. 
 Here we set it to the true value of light speed minus 299, 000 (so it is coded the same way as the measurements in the `morley` data frame): 792.458. 
 We also would like to fine tune this vertical line, 
-styling it so that is dashed and 1 point in thickness. 
+styling it so that it is dashed and 1 point in thickness.
+A point is a measurement unit commonly used with font, 
+and 1 point is about 0.353 mm. 
 We do this by setting `linetype = "dashed"` and `size = 1`, respectively. 
 There is a similar function, `geom_hline`, 
 that is used for plotting horizontal lines. 
@@ -820,25 +850,40 @@ morley_hist <- ggplot(morley, aes(x = Speed)) +
 morley_hist
 ```
 
-In Figure \@ref(fig:03-data-morley-hist-2), we also still cannot tell which experiments (denoted in the `Expt` column) led to which measurements; perhaps some experiments were more accurate than
-others. To fully answer our question, we need to separate the measurements from each other visually. We can
-try to do this using a *coloured* histogram, where counts from different experiments are stacked on top of each
-other in different colours. We can create a histogram coloured by the `Expt` variable by adding it to the `fill` aesthetic mapping. We make sure the different colours can be seen (despite them all sitting on top of each other) by setting the `alpha` argument in `geom_histogram`
-to `0.5` to make the bars slightly translucent:
+In Figure \@ref(fig:03-data-morley-hist-2), 
+we still cannot tell which experiments (denoted in the `Expt` column) 
+led to which measurements; 
+perhaps some experiments were more accurate than others. 
+To fully answer our question, 
+we need to separate the measurements from each other visually. 
+We can try to do this using a *coloured* histogram, 
+where counts from different experiments are stacked on top of each other 
+in different colours. 
+We can create a histogram coloured by the `Expt` variable 
+by adding it to the `fill` aesthetic mapping. 
+We make sure the different colours can be seen 
+(despite them all sitting on top of each other) 
+by setting the `alpha` argument in `geom_histogram` to `0.5` 
+to make the bars slightly translucent. 
+We also specify `position = "identity"` in `geom_histogram` to ensure 
+the histograms for each experiment will be overlaid side-by-side, 
+instead of stacked bars 
+(which is the default for bar charts or histograms 
+when they are colored by another categorical variable):
 
 ```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data coloured by experiment"}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
-  geom_histogram(position = "identity", alpha = 0.5) +
+  geom_histogram(alpha = 0.5, position = "identity") +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
 morley_hist
 ```
 
-Wait a second; the histogram is still all the same colour! What is going on here? If we look at the printed `morley` data, the column `Expt` is an integer (we see the label `<int>` underneath the `Expt` column name). But we want to treat it as a categorical variable.  To fix this issue we can write `as_factor(Expt)` in the `fill` aesthetic mapping. Recall that factors are a special categorical type of variable in R that are often used for class label data. By writing `as_factor(Expt)` we are ensuring that R will treat this variable as a factor and the colour will be mapped discretely.
+Wait a second; the histogram is still all the same colour! What is going on here? If we look at the printed `morley` data, the column `Expt` is an integer (we see the label `<int>` underneath the `Expt` column name). But we want to treat it as a categorical variable.  To fix this issue we can write `as_factor(Expt)` in the `fill` aesthetic mapping. Recall that factors are a special categorical type of variable in R that are often used for class label data. By writing `as_factor(Expt)` we are ensuring that R will treat this variable as a factor, and the colour will be mapped discretely.
 \index{factor!usage in ggplot}
 
 ```{r 03-data-morley-hist-with-factor, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data coloured by experiment as factor"}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
-  geom_histogram(position = "identity", alpha = 0.5) +
+  geom_histogram(alpha = 0.5, position = "identity") +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
 morley_hist
 ```
@@ -869,7 +914,7 @@ in the context of the data frame.
 
 ```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment"}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
-  geom_histogram(position = "identity") +
+  geom_histogram() +
   facet_grid(rows = vars(Expt)) +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
 morley_hist
@@ -886,7 +931,7 @@ To answer this question, we'll use the `mutate` function to transform our data i
 ```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels"}
 morley_rel <- mutate(morley, relative_accuracy = 100 * ((299000 + Speed) - 299792.458) / (299792.458))
 morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_factor(Expt))) +
-  geom_histogram(position = "identity") +
+  geom_histogram() +
   facet_grid(rows = vars(Expt)) +
   geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) +
   labs(x = "Relative Accuracy (%)", y = "# Measurements", fill = "Experiment ID") +
@@ -925,7 +970,7 @@ Whereas the bin widths of 0.001 and 0.1 are too small and too big, respectively.
 
 ```{r 03-data-morley-hist-binwidth, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 10, fig.cap = "Effect of varying bin width on histograms."}
 morley_hist_default <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_factor(Expt))) +
-  geom_histogram(position = "identity") +
+  geom_histogram() +
   facet_grid(rows = vars(Expt)) +
   geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) +
   labs(x = "Relative Accuracy (%)", y = "# Measurements", fill = "Experiment ID") +
@@ -933,7 +978,7 @@ morley_hist_default <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_f
   ggtitle("Default bin width (bins = 30)")
 
 morley_hist_big <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_factor(Expt))) +
-  geom_histogram(position = "identity", binwidth = 0.1) +
+  geom_histogram(binwidth = 0.1) +
   facet_grid(rows = vars(Expt)) +
   geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) +
   labs(x = "Relative Accuracy (%)", y = "# Measurements", fill = "Experiment ID") +
@@ -941,7 +986,7 @@ morley_hist_big <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_facto
   ggtitle( "binwidth = 0.1")
 
 morley_hist_med <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_factor(Expt))) +
-  geom_histogram(position = "identity", binwidth = 0.01) +
+  geom_histogram(binwidth = 0.01) +
   facet_grid(rows = vars(Expt)) +
   geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) +
   labs(x = "Relative Accuracy (%)", y = "# Measurements", fill = "Experiment ID") +
@@ -949,7 +994,7 @@ morley_hist_med <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_facto
   ggtitle("binwidth = 0.01")
 
 morley_hist_small <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_factor(Expt))) +
-  geom_histogram(position = "identity", binwidth = 0.001) +
+  geom_histogram(binwidth = 0.001) +
   facet_grid(rows = vars(Expt)) +
   geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) +
   labs(x = "Relative Accuracy (%)", y = "# Measurements", fill = "Experiment ID") +
@@ -962,8 +1007,6 @@ plot_grid(morley_hist_default,
           morley_hist_big, 
           ncol = 2)
 ```
-
-
 
 #### Adding layers to a `ggplot` plot object {-}
 
